Further define relational composition and loop prevention sections

--- a/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
+++ b/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
@@ -585,7 +585,7 @@
     "\n",
     "Consider the case of adding a new vertex to a red black graph. The new vertex, $\\lambda$, may introduce edges to/from vertices in the graph and the corresponding row/column vectors conform to the compositional vector classes defined above. Specifically if adding a red vertex to the graph, the vectors $u^{r}_{\\lambda,s}$ and $v^{r}_{\\lambda,s}$ define the composition, or if adding a black vertex to the graph, the vectors $u^{b}_{\\lambda,s}$ and $v^{b}_{\\lambda,s}$ define the composition. These compositional vectors have non-zero elements only for immediate ancestry/descendency. The operation of adding a new vertex to a graph is designated the \"vertex relational composition\" and is defined where $R^+$ is a square matrix of dimension $N$ and $R_{\\lambda}^+$ is a square matrix of dimension $N + 1$ and the colors of $\\vec{u^{c}_{\\lambda,s}}$ and $\\vec{v^{c}_{\\lambda,s}}$ must be the same. The notation of the vertex relational composition is:\n",
     "\n",
-    "$$R_{\\lambda}^+ = \\vec{u^{c}_{\\lambda,s}}\\text{,}R^+\\text{,}\\vec{v^{c}_{\\lambda,s}}\\text{,}color$$\n",
+    "$$R_{\\lambda}^+ = {\\vec{u^{c}_{\\lambda,s}} R^+ \\vec{v^{c}_{\\lambda,s}}}_{color}$$\n",
     "\n",
     "The simple/complete relationship observation above can be applied in this instance. $\\vec{u^{c}_{\\lambda,s}} = \\vec{u^{c}_{\\lambda,c}}$ and $R^+ \\lor \\vec{v^{c}_{\\lambda,s}} = \\vec{v^{c}_{\\lambda,c}}$. $\\vec{u^{c}_{\\lambda,c}}$ and $\\vec{v^{c}_{\\lambda,c}}$ are the row and column, respectively, that need to be appended to $R^+$ (along with the final diagonal element corresponding to $\\lambda$'s color) to compose $R_{\\lambda}^+$. Appending the complete compositional vectors to $R^+$ isn't sufficient to compose $R_{\\lambda}^+$. The \"body\" of $R^+$ needs to be \"updated\" to ensure that $R_{\\lambda}^+$ is also transitively closed. For each row in $R^+$, every element in that row is set to the avos product of the corresponding column element in $\\vec{v^{c}_{\\lambda,c}}$ and the corresponding row element in $\\vec{u^{c}_{\\lambda,c}}$.\n",
     "\n",
@@ -602,9 +602,9 @@
     "### Adding an Edge to $R^+$\n",
     "Consider the case of adding a new edge to a red black graph. The operation of adding a new edge to a graph is designated the \"edge relational composition\". The new edge is added between two existing vertices, $vertex_\\alpha$ and $vertex_\\beta$. The notation of the edge relational composition is:\n",
     "\n",
-    "$$R^+_\\lambda = R^+,\\alpha,\\beta,n_p^{\\alpha \\rightarrow \\beta}$$\n",
+    "$$R^+_\\lambda = R^+ \\lor_{\\alpha, \\beta} n_p^{\\alpha \\rightarrow \\beta}$$\n",
     "\n",
-    "As in the vertex relational composition, we'll make use of the simple/complete relational observation. In this case, the row representing $vertex_\\alpha$ is replaced with the avos product of itself (with $element_beta$ replaced with $n_p^{\\alpha \\rightarrow \\beta}$) and $R^+$. Notationally: $R^{+'} = R^+ +_\\alpha ((vertex_\\alpha +_\\beta n_p^{\\alpha \\rightarrow \\beta}) \\lor R^+)$ where $+_i$ designates replacement of element $i$ in the LHS with the value of the RHS. As in the vertex relational composition, replacing row vector $\\alpha$ with it's complete form isn't sufficient to compose $R_{\\lambda}^+$. The remainder of the row vectors need to be closed with the new relationship. For each row, $i$, in $R^{+'}$ excluding $\\alpha$, every element, $j$ in that row is set to $R^{+'}_{i,\\alpha} \\lor R^{+'}_{\\alpha,j}$.\n",
+    "As in the vertex relational composition, we'll make use of the simple/complete relational observation. In this case, the row representing $vertex_\\alpha$ is replaced with the avos product of itself (with $element_\\beta$ replaced with $n_p^{\\alpha \\rightarrow \\beta}$) and $R^+$. Notationally: $R^{+'} = R^+ +_\\alpha ((vertex_\\alpha +_\\beta n_p^{\\alpha \\rightarrow \\beta}) \\lor R^+)$ where $+_i$ designates replacement of element $i$ in the LHS with the value of the RHS. As in the vertex relational composition, replacing row vector $\\alpha$ with it's complete form isn't sufficient to compose $R_{\\lambda}^+$. The remainder of the row vectors need to be closed with the new relationship. For each row, $i$, in $R^{+'}$ excluding $\\alpha$, every element, $j$ in that row is set to $R^{+'}_{i,\\alpha} \\lor R^{+'}_{\\alpha,j}$.\n",
     "\n",
     "Expressing this algorithmically:\n",
     "\n",
@@ -684,11 +684,17 @@
     "# Applications of avos Linear Algebra\n",
     "## Loop Prevention\n",
     "\n",
-    "An issue that can be encountered in systems that represent familial relationships is the inadvertent injection of graph cycles, resulting in the [\"I am my own Grandpa\"](https://en.wikipedia.org/wiki/I%27m_My_Own_Grandpa) case. While this is impossible when relationships model sexual reproduction, the introduction of step-relationships, etc. would make this a possibility. Often times there is ambiguity in the available historical records. If a researcher isn't careful, cylces may result as a genealogical model is created.\n",
+    "An issue that can be encountered in systems that represent familial relationships is the inadvertent injection of graph cycles, resulting in the [\"I am my own Grandpa\"](https://en.wikipedia.org/wiki/I%27m_My_Own_Grandpa) case. While this is impossible when relationships model sexual reproduction, the introduction of step-relationships, etc. would make this a possibility. Often times there is ambiguity in the available historical records. If a researcher isn't careful, cylces may result as a genealogical model is created. Modifications to both forms of the relational composition algorithms can prevent the introduction of cycles into the graph. \n",
     "\n",
-    "A modification to the relational_composition algorithm can prevent the introduction of cycles into a Red Black Graph. As vertices are added to an existing graph via relational composition, the intermedite, complete compositional vectors, $\\vec{u^{c}_{\\lambda, c}}$ and $\\vec{v^{c}_{\\lambda, s}}$ represent the complete ancestry and complete descedency for the new vertex $\\lambda$ respectively. The cycle constraint would be invalidated should there be any vertex that simultaneously appears in the ancestry and descendency for a given vertex.\n",
+    "### Vertex Relational Composition Loop Prevention\n",
     "\n",
-    "This is easily validated in the **relational composition** algorithm and can be expressed more formally. Given $\\vec{u^{c}_{\\lambda, c}}$ and $\\vec{v^{c}_{\\lambda, s}}$ of dimension $n$, **relational composition** is undefined if there exists a dimension $i$ where $i$ != $n$ and $\\vec{u^{c}_{\\lambda, c}}_{i} != 0$ and $\\vec{v^{c}_{\\lambda, s}}_{i} != 0$. The **relational composition** is well-formed otherwise.\n",
+    "As vertices are added to an existing graph via relational composition, the intermedite, complete compositional vectors, $\\vec{u^{c}_{\\lambda, c}}$ and $\\vec{v^{c}_{\\lambda, s}}$ represent the complete ancestry and complete descedency for the new vertex $\\lambda$ respectively. The cycle constraint would be invalidated should there be any vertex that simultaneously appears in the ancestry and descendency for a given vertex.\n",
+    "\n",
+    "Given $\\vec{u^{c}_{\\lambda, c}}$ and $\\vec{v^{c}_{\\lambda, s}}$ of dimension $n$, the **vertex relational composition** is undefined if there exists a dimension $i$ where $i \\neq n \\land \\vec{u^{c}_{\\lambda, c}}_{i} \\neq 0 \\land \\vec{v^{c}_{\\lambda, s}}_{i} \\neq 0$ and is well-formed otherwise.\n",
+    "\n",
+    "### Edge Relational Composition Loop Prevention\n",
+    "\n",
+    "This case is trivial with a transitively closed matrix. Given $R^+$ and $n_p^{\\alpha \\rightarrow \\beta}$, the **edge relational composition** is undefined if $n_p^{\\beta \\rightarrow \\alpha} \\neq 0$ and well-formed otherwise.\n",
     "\n",
     "# Appendix A\n",
     "## Determinants\n",
