Update test case for vertex relational composition Update Notebook

--- a/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
+++ b/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +772,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Simple Implementation"
+    "## Simple Implementation\n",
+    "### Transitive Closure"
    ]
   },
   {
@@ -833,6 +834,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Vertex Relational Composition\n",
     "For illustrative purposes, let's remove John from the rb.array representation of the graph"
    ]
   },
@@ -943,8 +945,16 @@
     "     [ 0], # S\n",
     "     [ 0], # Em\n",
     "    ]\n",
-    "A_lambda = smp.relational_composition(u, A1, v, -1)\n",
+    "A_lambda = smp.vertex_relational_composition(u, A1, v, -1)\n",
     "A_lambda"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Edge Transitive Closure\n",
+    "Using the above example, remove the relationship from Regina to John"
    ]
   },
   {
@@ -953,17 +963,59 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8.39 ms ± 225 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[-1,  2,  3,  0,  0,  4,  5,  7,  0,  0,  8,  9, 12, 13,  6],\n",
+       "       [ 0, -1,  0,  0,  0,  2,  3,  0,  0,  0,  4,  5,  0,  0,  0],\n",
+       "       [ 0,  0,  1,  0,  0,  0,  0,  3,  0,  0,  0,  0,  4,  5,  2],\n",
+       "       [ 0,  0,  0,  1,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
+       "       [ 0,  2,  0,  3, -1,  4,  5,  0,  0,  0,  8,  9,  0,  0,  0],\n",
+       "       [ 0,  0,  0,  0,  0, -1,  0,  0,  0,  0,  2,  3,  0,  0,  0],\n",
+       "       [ 0,  0,  0,  0,  0,  0,  1,  0,  0,  0,  0,  0,  0,  0,  0],\n",
+       "       [ 0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0,  0,  0,  0,  0],\n",
+       "       [ 0,  0,  0,  0,  0,  0,  0,  0, -1,  3,  0,  0,  4,  5,  2],\n",
+       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0,  0,  0],\n",
+       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0, -1,  0,  0,  0,  0],\n",
+       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0],\n",
+       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0, -1,  0,  0],\n",
+       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0],\n",
+       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  2,  3, -1]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%timeit\n",
-    "B1 = copy.deepcopy(A1)\n",
-    "A1_star, diameter = smp.warshall(B1)"
+    "#        D   E   R   M   H  Mi   A   I  Do  Ev   G  Ma   S  Em   J\n",
+    "R1 = [[ -1,  2,  3,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],  # D\n",
+    "      [  0, -1,  0,  0,  0,  2,  3,  0,  0,  0,  0,  0,  0,  0,  0],  # E\n",
+    "      [  0,  0,  1,  0,  0,  0,  0,  3,  0,  0,  0,  0,  0,  0,  0],  # R\n",
+    "      [  0,  0,  0,  1,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],  # M\n",
+    "      [  0,  2,  0,  3, -1,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],  # H\n",
+    "      [  0,  0,  0,  0,  0, -1,  0,  0,  0,  0,  2,  3,  0,  0,  0],  # Mi\n",
+    "      [  0,  0,  0,  0,  0,  0,  1,  0,  0,  0,  0,  0,  0,  0,  0],  # A\n",
+    "      [  0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0,  0,  0,  0,  0],  # I\n",
+    "      [  0,  0,  0,  0,  0,  0,  0,  0, -1,  3,  0,  0,  0,  0,  2],  # Do\n",
+    "      [  0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0,  0,  0],  # Ev\n",
+    "      [  0,  0,  0,  0,  0,  0,  0,  0,  0,  0, -1,  0,  0,  0,  0],  # G\n",
+    "      [  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0],  # Ma\n",
+    "      [  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0, -1,  0,  0],  # S\n",
+    "      [  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0], # Em\n",
+    "      [  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  2,  3, -1]  # J\n",
+    "      ]\n",
+    "R = smp.warshall(R1)[0]\n",
+    "# Missing edge is R -> J, 2\n",
+    "A_lambda = smp.edge_relational_composition(R, 2, 14, 2)\n",
+    "A_lambda"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Timings"
    ]
   },
   {
@@ -975,25 +1027,63 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "432 µs ± 9.68 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "8.93 ms ± 1.33 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit\n",
-    "A_lambda = smp.relational_composition(u, A1, v, -1)"
+    "B1 = copy.deepcopy(A1)\n",
+    "A1_star, diameter = smp.warshall(B1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "477 µs ± 103 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "A_lambda = smp.vertex_relational_composition(u, A1, v, -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "503 µs ± 15.3 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "A_lambda = smp.edge_relational_composition(R, 2, 14, 2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Optimized Implementation"
+    "## Optimized Implementation\n",
+    "### Transitive Closure"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1051,8 +1141,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Vertex Relational Composition\n",
+    "For illustrative purposes, let's remove John from the rb.array representation of the graph"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1110,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1177,44 +1275,16 @@
     "print(f\"u_lambda:\\n{u_lambda}\")\n",
     "print(f\"v_lambda:\\n{v_lambda}\")\n",
     "\n",
-    "A_lambda = A1_star.relational_composition(u, v, -1)\n",
+    "A_lambda = A1_star.vertex_relational_composition(u, v, -1)\n",
     "print(f\"A_lambda:\\n{A_lambda}\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "25.7 µs ± 588 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
-     ]
-    }
-   ],
    "source": [
-    "%%timeit\n",
-    "A_star, diameter = A.transitive_closure()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "34.4 µs ± 471 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%timeit\n",
-    "A_lambda = A1_star.relational_composition(u, v, -1)"
+    "### Edge Transitive Closure\n",
+    "Using the above example, remove the relationship from Regina to John"
    ]
   },
   {
@@ -1225,10 +1295,132 @@
     {
      "data": {
       "text/plain": [
-       "0.99999999999999978"
+       "array([[-1,  2,  3,  0,  0,  4,  5,  7,  0,  0,  8,  9, 12, 13,  6],\n",
+       "       [ 0, -1,  0,  0,  0,  2,  3,  0,  0,  0,  4,  5,  0,  0,  0],\n",
+       "       [ 0,  0,  1,  0,  0,  0,  0,  3,  0,  0,  0,  0,  4,  5,  2],\n",
+       "       [ 0,  0,  0,  1,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
+       "       [ 0,  2,  0,  3, -1,  4,  5,  0,  0,  0,  8,  9,  0,  0,  0],\n",
+       "       [ 0,  0,  0,  0,  0, -1,  0,  0,  0,  0,  2,  3,  0,  0,  0],\n",
+       "       [ 0,  0,  0,  0,  0,  0,  1,  0,  0,  0,  0,  0,  0,  0,  0],\n",
+       "       [ 0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0,  0,  0,  0,  0],\n",
+       "       [ 0,  0,  0,  0,  0,  0,  0,  0, -1,  3,  0,  0,  4,  5,  2],\n",
+       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0,  0,  0],\n",
+       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0, -1,  0,  0,  0,  0],\n",
+       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0],\n",
+       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0, -1,  0,  0],\n",
+       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0],\n",
+       "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  2,  3, -1]])"
       ]
      },
      "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#                 D   E   R   M   H  Mi   A   I  Do  Ev   G  Ma   S  Em   J\n",
+    "R1 = rb.array([[ -1,  2,  3,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],  # D\n",
+    "               [  0, -1,  0,  0,  0,  2,  3,  0,  0,  0,  0,  0,  0,  0,  0],  # E\n",
+    "               [  0,  0,  1,  0,  0,  0,  0,  3,  0,  0,  0,  0,  0,  0,  0],  # R\n",
+    "               [  0,  0,  0,  1,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],  # M\n",
+    "               [  0,  2,  0,  3, -1,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],  # H\n",
+    "               [  0,  0,  0,  0,  0, -1,  0,  0,  0,  0,  2,  3,  0,  0,  0],  # Mi\n",
+    "               [  0,  0,  0,  0,  0,  0,  1,  0,  0,  0,  0,  0,  0,  0,  0],  # A\n",
+    "               [  0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0,  0,  0,  0,  0],  # I\n",
+    "               [  0,  0,  0,  0,  0,  0,  0,  0, -1,  3,  0,  0,  0,  0,  2],  # Do\n",
+    "               [  0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0,  0,  0],  # Ev\n",
+    "               [  0,  0,  0,  0,  0,  0,  0,  0,  0,  0, -1,  0,  0,  0,  0],  # G\n",
+    "               [  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0,  0,  0],  # Ma\n",
+    "               [  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0, -1,  0,  0],  # S\n",
+    "               [  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  0],  # Em\n",
+    "               [  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  2,  3, -1]   # J\n",
+    "      ])\n",
+    "R = R1.transitive_closure()[0]\n",
+    "# Missing edge is R -> J, 2\n",
+    "A_lambda = R.edge_relational_composition(2, 14, 2)\n",
+    "A_lambda"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Timings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26.7 µs ± 1.34 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "A_star, diameter = A.transitive_closure()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35.1 µs ± 465 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "A_lambda = A1_star.vertex_relational_composition(u, v, -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.05 µs ± 1.51 µs per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "A_lambda = R.edge_relational_composition(2, 14, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Miscellaneous Linear Algebra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.99999999999999978"
+      ]
+     },
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1240,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1249,7 +1441,7 @@
        "{'black': 7, 'red': 8}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
