--- a/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
+++ b/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
@@ -1027,7 +1027,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.93 ms ± 1.33 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "7.89 ms ± 361 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -1046,7 +1046,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "477 µs ± 103 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "381 µs ± 10.1 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -1064,7 +1064,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "503 µs ± 15.3 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "455 µs ± 37.5 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -1357,7 +1357,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "26.7 µs ± 1.34 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "24.6 µs ± 3.36 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -1375,7 +1375,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "35.1 µs ± 465 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "34.4 µs ± 1.01 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -1393,7 +1393,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.05 µs ± 1.51 µs per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+      "5.59 µs ± 340 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     }
    ],
