Add simple implementation of find_components Refactor relationship file reader Add section to notebook on finding components

--- a/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
+++ b/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
@@ -736,6 +736,93 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Other Applications of Red Black Graphs\n",
+    "\n",
+    "## Connected Component Identification\n",
+    "\n",
+    "As Red Black Graphs are used to represent family relationships, an interesting case is determining how many disjoint trees are represetned within a graph. Tarjan's algorithm is typically used to compute the connected components of a graph. In the case of a transitively closed adjacency matrix, the depth first search used in Tarjan's algorithm is inherently \"pre-computed\". Therefor the algorithm can be simplified as follows: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load ../redblackgraph/simple/components.py\n",
+    "def find_components(A):\n",
+    "    \"\"\"\n",
+    "    Given an input adjacency matrix (assumed to be transitively closed), compute the connected\n",
+    "    components\n",
+    "    :param A: input adjacency matrix\n",
+    "    :return: a tuple of:\n",
+    "      [0] - a vector with matching length of A with the elements holding the connected component id of \n",
+    "    the identified connected components\n",
+    "      [1] - the number of connected components identified\n",
+    "    \"\"\"\n",
+    "    u = [0] * len(A)\n",
+    "    component_number = 1\n",
+    "    u[0] = component_number\n",
+    "    for i in range(len(A)):\n",
+    "        if u[i] == 0:\n",
+    "            component_number += 1\n",
+    "            u[i] = component_number\n",
+    "        row_component_number = u[i]\n",
+    "        for j in range(len(A)):\n",
+    "            if A[i][j] != 0:\n",
+    "                if u[j] == 0:\n",
+    "                    u[j] = row_component_number\n",
+    "                elif u[j] != row_component_number:\n",
+    "                    # we've encountered an \"overlapping\" row, the row number really should\n",
+    "                    # be what we just found in u[j] and we'll need to reverse any changes\n",
+    "                    # we've made up to this point\n",
+    "                    for k in range(j):\n",
+    "                        if u[k] == row_component_number:\n",
+    "                            u[k] = u[j]\n",
+    "                    component_number -= 1\n",
+    "                    row_component_number = u[j]\n",
+    "                    u[i] = row_component_number\n",
+    "    return (u, component_number)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([1, 1, 1, 2, 2, 2, 2], 2)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = [[-1, 2, 3, 0, 0, 0, 0],\n",
+    "     [ 0,-1, 0, 0, 0, 0, 0],\n",
+    "     [ 0, 0, 1, 0, 0, 0, 0],\n",
+    "     [ 0, 0, 0, 1, 2, 0, 0],\n",
+    "     [ 0, 0, 0, 0,-1, 2, 3],\n",
+    "     [ 0, 0, 0, 0, 0,-1, 0],\n",
+    "     [ 0, 0, 0, 0, 0, 0, 1]]\n",
+    "find_components(A)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As with Tajan's algorithm, with an efficient sparse representation this algorithm is also $O(|V| + |E|)$. Additionally, it is simple to add side-effects to the algorithm to also return the count of nodes in each component as well as the diameter of each component."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Appendix B\n",
     "## Implementation Notes on Numpy Extension\n",
     "\n",
