Move tests out of source directory Implement triangularization algorithm

--- a/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
+++ b/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
@@ -729,7 +729,14 @@
     "            -1, &         \\text{if } |V_{red}| \\text{ is odd}.\n",
     "    \\end{cases}$\n",
     "    \n",
-    "**TODO**: While I feel the conclusion is correct, the reasoning isn't quite right yet."
+    "**TODO**: While I feel the conclusion is correct, the reasoning isn't quite right yet.\n",
+    "\n",
+    "## Alternative\n",
+    "From Duff & Reid's paper, \"An Implementation of Tarjan's Algorithm for the BLock Triangularization of a Matrix\" the idea came to me of using the find_components method to be augmented to include a second vector, v, which tracks the max np for a given row. Then the graph can be relabeled starting with the largest component, and the row with the largest max np, then the second largest max np, etc. through the next largest component, etc. Doing this will yield a symettrical matrix that is upper triangular. Given that symetrical matrices have the same determeinent and that for upper triangular matrices the determinent is given by the product of the diagonal, the following property holds: $\\det R =\n",
+    "    \\begin{cases}\n",
+    "            1, &         \\text{if } |V_{red}| \\text{ is even},\\\\\n",
+    "            -1, &         \\text{if } |V_{red}| \\text{ is odd}.\n",
+    "    \\end{cases}$"
    ]
   },
   {
