Update Todo Add docstring to relationship file io

--- a/notebooks/Todo List.ipynb
+++ b/notebooks/Todo List.ipynb
@@ -6,8 +6,13 @@
    "source": [
     "# Things to consider / work on\n",
     "\n",
-    "## gufunc implementation find components\n",
-    "Add C implementation of find components.\n",
+    "## find components and triangularization\n",
+    "1. Add a simple implementation to rb.array/matrix\n",
+    "2. Add C implementation\n",
+    "\n",
+    "## Refactor relationship_file_io\n",
+    "1. Create a scripts directory and add the main that is currently in relationship_file_io into a script\n",
+    "2. Document input csv format\n",
     "\n",
     "## Sparse implementation\n",
     "I actually started with the sparse implementation and it shows much of my early thinking on avos linear algebra. However, the avos function has changed somewhat as have Red Black Graphs. The sparse implementation used 0's and 1's along the diagnoal to represent color. This required special casing of a lot of the math. Moving to -1's and 1's keep all special casing in the identity property of avos scalar multiplication.\n",
