--- a/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
+++ b/notebooks/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "['b', 'r', 'r']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
        " [2, 4, 5, 8, 1]]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,6 +696,225 @@
     "\n",
     "This case is trivial with a transitively closed matrix. Given $R^+$ and $n_p^{\\alpha \\rightarrow \\beta}$, the **edge relational composition** is undefined if $n_p^{\\beta \\rightarrow \\alpha} \\neq 0$ and well-formed otherwise.\n",
     "\n",
+    "## Connected Component Identification\n",
+    "\n",
+    "As Red Black Graphs are used to represent family relationships, an interesting case is determining how many disjoint trees are represetned within a graph. Tarjan's algorithm is typically used to compute the connected components of a graph. In the case of a transitively closed adjacency matrix, the depth first search used in Tarjan's algorithm is inherently \"pre-computed\". Because of this property, Tarjan's algorithm can be simplified.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load ../redblackgraph/simple/components.py\n",
+    "def find_components(A):\n",
+    "    \"\"\"\n",
+    "    Given an input adjacency matrix compute the connected components\n",
+    "    :param A: input adjacency matrix (transitively closed)\n",
+    "    :return: a vector with matching length of A with the elements holding the connected component id of\n",
+    "    the identified connected components\n",
+    "    \"\"\"\n",
+    "    u = [0] * len(A)\n",
+    "    component_number = 1\n",
+    "    u[0] = component_number\n",
+    "    for i in range(len(A)):\n",
+    "        if u[i] == 0:\n",
+    "            component_number += 1\n",
+    "            u[i] = component_number\n",
+    "        row_component_number = u[i]\n",
+    "        for j in range(len(A)):\n",
+    "            if A[i][j] != 0:\n",
+    "                if u[j] == 0:\n",
+    "                    u[j] = row_component_number\n",
+    "                elif u[j] != row_component_number:\n",
+    "                    # we've encountered an \"overlapping\" row, the row number really should\n",
+    "                    # be what we just found in u[j] and we'll need to reverse any changes\n",
+    "                    # we've made up to this point\n",
+    "                    for k in range(j):\n",
+    "                        if u[k] == row_component_number:\n",
+    "                            u[k] = u[j]\n",
+    "                    component_number -= 1\n",
+    "                    row_component_number = u[j]\n",
+    "                    u[i] = row_component_number\n",
+    "    return u\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Consider the following graph\n",
+    "\n",
+    "<img src=\"img/find-components.png\" alt=\"Graph with Components\" style=\"width: 200px;\"/>\n",
+    "<!-- ![Graph with Components](img/find-components.png){ width=50% } -->\n",
+    "\n",
+    "By inspection, there are two components and the application of the simplified Tarjan's algorithm identifies which vertices belong to which components."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 1, 1, 2, 1, 2]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "R = [[-1, 0, 0, 2, 0, 3, 0],\n",
+    "     [ 0,-1, 0, 0, 0, 0, 0],\n",
+    "     [ 2, 0, 1, 0, 0, 0, 0],\n",
+    "     [ 0, 0, 0,-1, 0, 0, 0],\n",
+    "     [ 0, 2, 0, 0,-1, 0, 3],\n",
+    "     [ 0, 0, 0, 0, 0, 1, 0],\n",
+    "     [ 0, 0, 0, 0, 0, 0, 1]]\n",
+    "find_components(R)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As with Tajan's algorithm, with an efficient sparse representation this algorithm is also $O(|V| + |E|)$. Additionally, it is simple to add side-effects to the algorithm to also return the count of nodes in each component as well as the diameter of each component. In fact, doing so leads us to the next observation. In their paper, **citation**, Duff and Reid observe that yada yada yada.\n",
+    "\n",
+    "## Canonical Form\n",
+    "The information provided by extending the simplified implementation of Tarjan's algorithm can be utilized to relabel the nodes of the graph and yeild an upper triangular matrix. This ordering of the graph, deepest node in the largest connected component successively down to the shallowest node in the smallest connected componet yields a symetrical form of the adjacency matrix that is designated as the canonical form."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load ../redblackgraph/simple/triangularization.py\n",
+    "import numpy as np\n",
+    "\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "\n",
+    "def find_components_extended(A):\n",
+    "    \"\"\"\n",
+    "    Given an input adjacency matrix (assumed to be transitively closed), triangularize the\n",
+    "    matrix (simply a relabeling of the graph)\n",
+    "    :param A: input adjacency matrix\n",
+    "    :return: a tuple of:\n",
+    "      [0] - a vector matching length of A with the elements holding the connected component id of\n",
+    "      the identified connected components - labeled u\n",
+    "      [1] - a vector matching length of A with the elements holding the max n_p for the corresponding\n",
+    "      row - labeled v\n",
+    "      [2] - a dictionary keyed by component id and valued by size of component\n",
+    "    \"\"\"\n",
+    "    u = [0] * len(A)\n",
+    "    v = [0] * len(A)\n",
+    "    q = defaultdict(lambda: 0)\n",
+    "    component_number = 1\n",
+    "    u[0] = component_number\n",
+    "    q[component_number] += 1\n",
+    "    for i in range(len(A)):\n",
+    "        row_max = -2\n",
+    "        if u[i] == 0:\n",
+    "            component_number += 1\n",
+    "            u[i] = component_number\n",
+    "            q[component_number] += 1\n",
+    "        row_component_number = u[i]\n",
+    "        for j in range(len(A)):\n",
+    "            if A[i][j] != 0:\n",
+    "                row_max = max(A[i][j], row_max)\n",
+    "                if u[j] == 0:\n",
+    "                    u[j] = row_component_number\n",
+    "                    q[row_component_number] += 1\n",
+    "                elif u[j] != row_component_number:\n",
+    "                    # we've encountered an \"overlapping\" row, the row number really should\n",
+    "                    # be what we just found in u[j] and we'll need to reverse any changes\n",
+    "                    # we've made up to this point\n",
+    "                    for k in range(j):\n",
+    "                        if u[k] == row_component_number:\n",
+    "                            u[k] = u[j]\n",
+    "                            q[row_component_number] -= 1\n",
+    "                            q[u[j]] += 1\n",
+    "                    if i > j:\n",
+    "                        u[i] = u[j]\n",
+    "                        q[u[j]] += 1\n",
+    "                        q[row_component_number] -= 1\n",
+    "                    component_number -= 1\n",
+    "                    row_component_number = u[j]\n",
+    "        v[i] = row_max\n",
+    "    return (u, v, {k:v for k,v in q.items() if v != 0})\n",
+    "\n",
+    "def triangularize(A):\n",
+    "    \"\"\"\n",
+    "    u, v, and q are computed via find_components_extended, and then used to compute a\n",
+    "    permutation matrix, P, and then return P @ A @ P\n",
+    "    :param A:\n",
+    "    :return: a triangular matrix that is symmetrical to A (a relabeling of the graph vertices)\n",
+    "    \"\"\"\n",
+    "    u, v, q = find_components_extended(A)\n",
+    "\n",
+    "    # this yeilds a list of tuples where each tuple is the size of the component, the component id of the vertex,\n",
+    "    # the max np for the vertex and the id of the vertex. We want the nodes\n",
+    "    # ordered by components size, componente id, max np, finally by vertex id\n",
+    "    permutation_basis = sorted(\n",
+    "        [(q[element[1][0]],) + element[1] + (element[0],) for element in enumerate(zip(u, v))],\n",
+    "        reverse=True\n",
+    "    )\n",
+    "\n",
+    "    # from the permutation basis, create the permutation matrix\n",
+    "    n = len(permutation_basis)\n",
+    "    P = np.zeros(shape=(n, n), dtype=np.int32)\n",
+    "    for idx, element in enumerate(permutation_basis):\n",
+    "        P[idx][element[3]] = 1\n",
+    "\n",
+    "    # triagularize A\n",
+    "    return (P @ A @ np.transpose(P)).tolist()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2, 5, 4, 0, 0, 0],\n",
+       " [0, -1, 3, 2, 0, 0, 0],\n",
+       " [0, 0, 1, 0, 0, 0, 0],\n",
+       " [0, 0, 0, -1, 0, 0, 0],\n",
+       " [0, 0, 0, 0, -1, 3, 2],\n",
+       " [0, 0, 0, 0, 0, 1, 0],\n",
+       " [0, 0, 0, 0, 0, 0, -1]]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "triangularize(warshall(A)[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"img/canonical.png\" alt=\"Graph with Components (Canonical Form)\" style=\"width: 200px;\"/>\n",
+    "<!-- ![Graph with Components (Canonical Form)](img/canonical.png){ width=50% } -->\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Appendix A\n",
     "## Determinants\n",
     "\n",
@@ -737,93 +956,6 @@
     "            1, &         \\text{if } |V_{red}| \\text{ is even},\\\\\n",
     "            -1, &         \\text{if } |V_{red}| \\text{ is odd}.\n",
     "    \\end{cases}$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Other Applications of Red Black Graphs\n",
-    "\n",
-    "## Connected Component Identification\n",
-    "\n",
-    "As Red Black Graphs are used to represent family relationships, an interesting case is determining how many disjoint trees are represetned within a graph. Tarjan's algorithm is typically used to compute the connected components of a graph. In the case of a transitively closed adjacency matrix, the depth first search used in Tarjan's algorithm is inherently \"pre-computed\". Therefor the algorithm can be simplified as follows: "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %load ../redblackgraph/simple/components.py\n",
-    "def find_components(A):\n",
-    "    \"\"\"\n",
-    "    Given an input adjacency matrix (assumed to be transitively closed), compute the connected\n",
-    "    components\n",
-    "    :param A: input adjacency matrix\n",
-    "    :return: a tuple of:\n",
-    "      [0] - a vector with matching length of A with the elements holding the connected component id of \n",
-    "    the identified connected components\n",
-    "      [1] - the number of connected components identified\n",
-    "    \"\"\"\n",
-    "    u = [0] * len(A)\n",
-    "    component_number = 1\n",
-    "    u[0] = component_number\n",
-    "    for i in range(len(A)):\n",
-    "        if u[i] == 0:\n",
-    "            component_number += 1\n",
-    "            u[i] = component_number\n",
-    "        row_component_number = u[i]\n",
-    "        for j in range(len(A)):\n",
-    "            if A[i][j] != 0:\n",
-    "                if u[j] == 0:\n",
-    "                    u[j] = row_component_number\n",
-    "                elif u[j] != row_component_number:\n",
-    "                    # we've encountered an \"overlapping\" row, the row number really should\n",
-    "                    # be what we just found in u[j] and we'll need to reverse any changes\n",
-    "                    # we've made up to this point\n",
-    "                    for k in range(j):\n",
-    "                        if u[k] == row_component_number:\n",
-    "                            u[k] = u[j]\n",
-    "                    component_number -= 1\n",
-    "                    row_component_number = u[j]\n",
-    "                    u[i] = row_component_number\n",
-    "    return (u, component_number)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "([1, 1, 1, 2, 2, 2, 2], 2)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "A = [[-1, 2, 3, 0, 0, 0, 0],\n",
-    "     [ 0,-1, 0, 0, 0, 0, 0],\n",
-    "     [ 0, 0, 1, 0, 0, 0, 0],\n",
-    "     [ 0, 0, 0, 1, 2, 0, 0],\n",
-    "     [ 0, 0, 0, 0,-1, 2, 3],\n",
-    "     [ 0, 0, 0, 0, 0,-1, 0],\n",
-    "     [ 0, 0, 0, 0, 0, 0, 1]]\n",
-    "find_components(A)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As with Tajan's algorithm, with an efficient sparse representation this algorithm is also $O(|V| + |E|)$. Additionally, it is simple to add side-effects to the algorithm to also return the count of nodes in each component as well as the diameter of each component."
    ]
   },
   {
