Observation on find_components and find_components_extended

--- a/notebooks/Todo List.ipynb
+++ b/notebooks/Todo List.ipynb
@@ -9,6 +9,7 @@
     "## find components and triangularization\n",
     "1. Add a simple implementation to rb.array/matrix\n",
     "2. Add C implementation\n",
+    "3. It seems that find_components does not need A to be transitively closed, while find_components_extended does.\n",
     "\n",
     "## Refactor relationship_file_io\n",
     "1. Create a scripts directory and add the main that is currently in relationship_file_io into a script\n",
