Fix find components algorithm to account for the "row merges two components" use case

--- a/notebooks/Experiments - Rapp FamilyHistory.ipynb
+++ b/notebooks/Experiments - Rapp FamilyHistory.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
      "output_type": "stream",
      "text": [
       "[2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
-      " 2 2 2 1 1 1 1 2 2 2 2 2 2 2 2 2 2 2 2]\n"
+      " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2]\n"
      ]
     }
    ],
@@ -216,42 +216,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1  0  0  0  0  0  0  3  0  0  0 ..., 30  2  6  0  0  0  0  0  0  0  0]\n",
-      " [ 0 -1  0  0  0  0  0  3  0  0  0 ..., 30  2  6  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  1  0  0  0  2  0  0  0  0 ..., 22  0  4  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0 -1  0  0  2  0  0  0  0 ..., 22  0  4  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  1  0  0  0  0  0  0 ..., 14  0  0 22 20 18 16  0  0  0  0]\n",
-      " [ 0  0  0  0  0 -1  0  0  0  0  0 ..., 14  0  2  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0 -1  0  0  0  0 ..., 14  0  2  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  1  0  0  0 ..., 14  0  2  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0 -1  0  0 ..., 14  0  2  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0 -1  0 ...,  0  0  0 22 20 18 16  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  1 ...,  0  0  0 22 20 18 16  0  0  0  0]\n",
+      "[[ 1  0  0  0  0  0  0  3  0  0  0 ...,  0  0 58 56 30  2  6  0  0  0  0]\n",
+      " [ 0 -1  0  0  0  0  0  3  0  0  0 ...,  0  0 58 56 30  2  6  0  0  0  0]\n",
+      " [ 0  0  1  0  0  0  2  0  0  0  0 ...,  0  0 42 40 22  0  4  0  0  0  0]\n",
+      " [ 0  0  0 -1  0  0  2  0  0  0  0 ...,  0  0 42 40 22  0  4  0  0  0  0]\n",
+      " [ 0  0  0  0  1  0  0  0  0  0  0 ..., 19 17 26 24 14  0  0 22 20 18 16]\n",
+      " [ 0  0  0  0  0 -1  0  0  0  0  0 ...,  0  0 26 24 14  0  2  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0 -1  0  0  0  0 ...,  0  0 26 24 14  0  2  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  1  0  0  0 ...,  0  0 26 24 14  0  2  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0 -1  0  0 ...,  0  0 26 24 14  0  2  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0 -1  0 ..., 19 17  0  0  0  0  0 22 20 18 16]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  1 ..., 19 17  0  0  0  0  0 22 20 18 16]\n",
       " ..., \n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0 ..., -1  0  0  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0 ...,  0 -1  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0 ...,  1  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0 ...,  0  1  0  0  0  0  0  0  0  0  0]\n",
       " [ 0  0  0  0  0  0  0  0  0  0  0 ...,  0  0 -1  0  0  0  0  0  0  0  0]\n",
       " [ 0  0  0  0  0  0  0  0  0  0  0 ...,  0  0  0 -1  0  0  0  0  0  0  0]\n",
       " [ 0  0  0  0  0  0  0  0  0  0  0 ...,  0  0  0  0 -1  0  0  0  0  0  0]\n",
       " [ 0  0  0  0  0  0  0  0  0  0  0 ...,  0  0  0  0  0 -1  0  0  0  0  0]\n",
       " [ 0  0  0  0  0  0  0  0  0  0  0 ...,  0  0  0  0  0  0 -1  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0 ...,  0  0  0  6  4  0  0  1  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0 ...,  0  0  0  0  4  0  0  0 -1  0  3]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0 ...,  0  0  0  0  4  0  0  0  0  1  3]\n",
-      " [ 0  0  0  0  0  0  0  0  0  0  0 ...,  0  0  0  0  0  0  0  0  0  0  1]]\n"
+      " [ 0  0  0  0  0  0  0  0  0  0  0 ...,  0  0  0  0  0  0  0 -1  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0 ...,  0  0  0  0  0  0  0  0 -1  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0 ...,  0  0  0  0  0  0  0  0  0 -1  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0 ...,  0  0  0  0  0  0  0  0  0  0 -1]]\n"
      ]
     }
    ],
    "source": [
-    "R_canonical = R_lambda.triangularize()\n",
-    "writer(R_lambda, output_file=\"Rapp-FamilyHistory/canonical.results.xlsx\")\n",
+    "P = R_lambda.get_triangularization_permutation_matrices()\n",
+    "R_canonical = R_lambda.triangularize(P)\n",
+    "\n",
+    "key_transpose = P[1] @ np.arange(R_lambda.shape[0])\n",
+    "\n",
+    "writer(R_canonical, output_file=\"Rapp-FamilyHistory/canonical.results.xlsx\", key_transpose=key_transpose)\n",
     "print(R_canonical)"
    ]
   },
