Fix key_permutations when writing canonical matrix

--- a/notebooks/Experiments - Rapp FamilyHistory.ipynb
+++ b/notebooks/Experiments - Rapp FamilyHistory.ipynb
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -253,11 +253,18 @@
     "P = R_lambda.get_triangularization_permutation_matrices()\n",
     "R_canonical = R_lambda.triangularize(P)\n",
     "\n",
-    "key_transpose = P[1] @ np.arange(R_lambda.shape[0])\n",
+    "key_transpose = P[0] @ np.arange(R_lambda.shape[0]) @ P[1]\n",
     "\n",
     "writer(R_canonical, output_file=\"Rapp-FamilyHistory/canonical.results.xlsx\", key_transpose=key_transpose)\n",
     "print(R_canonical)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
